@@ -4725,6 +4725,15 @@ var Char = (function(){
        @memberof Nehan.Char
        @return {Object}
     */
+    getCssVertDashIE : function(line){
+      var css = {};
+      css["height"] = "0.9em"; // eliminate space between dash for IE.
+      return css;
+    },
+    /**
+       @memberof Nehan.Char
+       @return {Object}
+    */
     getCssVertEmphaText : function(line){
       var css = {}, font_size = line.style.getFontSize();
       css.display = "inline-block";
@@ -5164,6 +5173,13 @@ var Char = (function(){
      */
     isKerningChar : function(){
       return this.isZenkaku() && (this.isKutenTouten() || this.isKakko());
+    },
+    /**
+       @memberof Nehan.Char
+       @return {boolean}
+    */
+    isDash : function(){
+      return this.cnv === "&#8212;";
     },
     /**
        @memberof Nehan.Char
@@ -16655,9 +16671,11 @@ var VertEvaluator = (function(){
   };
 
   VertEvaluator.prototype._evalRotateCharTransform = function(line, chr){
+    var css = (Nehan.Env.client.isIE() && chr.isDash())? chr.getCssVertDashIE() : {};
     return this._createElement("div", {
       content:chr.getData(),
-      className:"nehan-rotate-90"
+      className:"nehan-rotate-90",
+      css:css
     });
   };
 
